# capture-track-from-DAW

./: AudioWaveformsDemo.jucer  CMakeLists.txt  README.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: AudioPlaybackDemo.h  AudioRecordingDemo.h  DemoUtilities.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/: boost_ext_di.cmake  gtest.cmake  juce.cmake
src/: CMakeLists.txt  JuceHeader.h  PluginARADocumentController.cpp  PluginARADocumentController.h  PluginARAPlaybackRenderer.cpp  PluginARAPlaybackRenderer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
